[package]
name = "bili-cli"
version = "0.1.22"
edition = "2021"

[[bin]]
name = "bilibili"
path = "src/main.rs"

[dependencies]
anyhow = "1.0.95"
media = { version = "0.1.0", path = "../bili-media" }
bili-video = { version = "0.1.0", path = "../bili-video" }
clap = { version = "4.5.26", features = ["derive"] }
lazycmd = "0.1.0"
lazytool = { version = "0.1.0", path = "../../../lazytool" }
rand = "0.8.5"
regex = "1.11.1"
settings = { version = "0.1.0", path = "../bili-settings" }
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.138"
tokio = { version = "1.43.0", features = ["full"] }
