[package]
name = "media"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.95"
bili-video = { version = "0.1.0", path = "../bili-video" }
lazytool = { version = "0.1.0", path = "../../../lazytool" }
rand = "0.8.5"
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.135"
settings = { version = "0.1.0", path = "../bili-settings" }
